--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,13 @@
 <resources>
     <string name="app_name">Rss Reader</string>
 
+    <string name="recyclerview_empty_text">Oops! Something is wrong. Please check your internet connection and try again.</string>
+    <string name="fragment_error">Error somewhere</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- SharedTransitions -->
+    <string name="transition_card" translatable="false">card</string>
+    <string name="description_news">Thumbnail for the news item</string>
 </resources>
